RESOLVED FIXED113417
[Mac] webkitClosedCaptionsVisible doesn't work
https://bugs.webkit.org/show_bug.cgi?id=113417
Summary [Mac] webkitClosedCaptionsVisible doesn't work
Eric Carlson
Reported 2013-03-27 09:51:08 PDT
Toggling the legacy property webkitClosedCaptionsVisible should enable and disable text tracks as existing code expects to use it to control in-band tracks.
Attachments
Proposed patch (15.04 KB, patch)
2013-03-27 10:42 PDT, Eric Carlson
no flags
Eric Carlson
Comment 1 2013-03-27 09:55:19 PDT
Eric Carlson
Comment 2 2013-03-27 10:42:54 PDT
Created attachment 195350 [details] Proposed patch
Eric Carlson
Comment 3 2013-03-27 11:44:11 PDT
Note You need to log in before you can comment on or make changes to this bug.