Source/WebCore/page/CaptionUserPreferencesMac.h
@@ -60,7 +60,7 @@ public:
 
 #endif
 
-    virtual int textTrackSelectionScore(TextTrack*) const OVERRIDE;
+    virtual int textTrackSelectionScore(TextTrack*, HTMLMediaElement*) const OVERRIDE;
     virtual Vector<RefPtr<TextTrack> > sortedTrackListForMenu(TextTrackList*) OVERRIDE;
     virtual String displayNameForTrack(TextTrack*) const OVERRIDE;
 
